<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/nameLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/scen_name" />
	
	    <EditText
	        android:id="@+id/nameField"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:ems="10" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/typeLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/scen_type" />
	
	    <Spinner
	        android:id="@+id/typeSpinner"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/descLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/scen_description" />
	
	    <EditText
	        android:id="@+id/descField"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:ems="10" />
	
	    <TextView
	        android:id="@+id/notesLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/scen_notes" />
	
	    <EditText
	        android:id="@+id/notesField"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:ems="10" />
	    
	    <CheckBox
	        android:id="@+id/basicsBox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/scen_basics" />
	
	    <LinearLayout
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="right" >
	
	        <Button
	            android:id="@+id/cancelButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/scen_cancel" />
	        
	        <Button
	            android:id="@+id/acceptButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/scen_accept" />
	        
	    </LinearLayout>
	
	</LinearLayout>
</ScrollView>